[package]
name = "lsp-types-f"
version = "0.97.1"
authors = [
	"Markus Westerlind <marwes91@gmail.com>",
	"Bruno Medeiros <bruno.do.medeiros@gmail.com>",
	"Decodertalkers <aakari@tutanota.com>",
]
edition = "2024"
description = "Types for interaction with a language server, using VSCode's Language Server Protocol"

repository = "https://github.com/neocmakelsp/lsp-types"
documentation = "https://docs.rs/lsp-types"

readme = "README.md"

keywords = ["language", "server", "lsp", "vscode", "lsif"]

license = "MIT"

[dependencies]
bitflags = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1"
fluent-uri = "0.3.2"

[features]
default = []
# Enables proposed LSP extensions.
# NOTE: No semver compatibility is guaranteed for types enabled by this feature.
proposed = []
